map objects across systems

--- a/views/add_a_new_link.erb
+++ b/views/add_a_new_link.erb
@@ -1,4 +1,5 @@
 <form action="/create-new-link" method="post">
   <input type="text" name="url" />
+  <input type="text" name="title" />
   <input type="submit" value="Submit" />
 </form>
