--- a/views/bookmarks/edit.erb
+++ b/views/bookmarks/edit.erb
@@ -1,8 +1,6 @@
 
-<form action='/bookmarks/<%=@bookmark.id %>' method='post'>
-  <input type='hidden' name='id' value='<%= @bookmark_id %>'>
-  <input type='text' name='url' />
-  <input type='text' name='title' />
-  <input type='hidden' name='_method' value='patch'>
+<form action='/bookmarks/<%= bookmark.id %>/update' method='post'>
+  <input type='text' name='url' value='<%=@bookmark.url %>' />
+  <input type='text' name='title' value='<%=@bookmark.title %>' />
   <input type='submit' value='Submit' />
-</form>  
+</form>
