--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -3,12 +3,10 @@
 <ul>
   <% @bookmarks.each do |bookmark| %>
     <li id="bookmark-<%="bookmark.id %>">
-      <a href="<%= lnik.url %>" target="_blank">
+      <a href="<%= bookmark.url %>" target="_blank">
         <%=bookmark.title %>
       </a>
-        <form action="/bookmarks/<%=bookmark.id %>" method="post">
-          <input type='hidden' name='_method' value='DELETE'/>
-          <input type='hidden' name='id' value='<%= bookmark.id %>'>
+        <form action="/bookmarks/<%=bookmark.id %>/delete" method="post">
           <input type='submit' value='Delete' />
         </form>
     </li>
